app/assets/stylesheets/application.css.scss
/*
* This is a manifest file that'll be compiled into application.css, which will include all the files
* listed below.
*
* Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
* or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
*
* You're free to add application-wide styles to this file and they'll appear at the bottom of the
* compiled file so the styles you add here take precedence over styles defined in any styles
* defined in the other CSS/SCSS files in this directory. It is generally better to create a new
* file per style scope.
*
*= require_tree .
*= require_self
*/

@import "bootstrap-sprockets";
@import "bootstrap";

.navbar {
}



#main {
	padding-top: 0px;
	padding-left: 0;
	padding-right: 0;
	height: 100%;
	width: 100%;
	overflow: hidden;
}

#backdrop {
	padding-top: 50px;
	padding-left: 0;
	padding-right: 0;
	height: 100%;
	width: 100%;
	overflow: hidden;
}

.navbar-btn {
	display: inline;
	margin: 8px 2px;
}

#panel{
	float: left;
	top: 0;
}

#map-canvas{
	min-width: 40%;
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	bottom: 0;
}

.boat-profile {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	padding-left: 6px;
	padding-right: 6px;
}

.boats {
	left: 48%;
	padding-top: 50px;
	background-color: white;
	position: absolute;
	overflow-y: auto;
	overflow-x: hidden;
	top: 0;
	bottom: 0;
	box-shadow: 6px 0px 5px -5px, -6px 0px 5px -5px;
	height: 100%;
}

.photo{
	height: 100%;
	display: block;
	width: 100%;
	position: relative;
}

.photo-show{
	display: block;
	width: 100%;
	position: relative;
}

.user {
	z-index: 3;
	position: absolute;
	left: 3%;
	bottom: 0px;
	background-color: #565a5c;
	color: white;
	margin: 0px;
	padding: 7px 10px;
	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
	font-size: 14px;
	line-height: 1.43;
	-webkit-font-smoothing: antialiased;
}

.price {
	z-index: 3;
	position: absolute;
	right: 0px;
	top: 10px;
	background-color: #565a5c;
	color: white;
	margin: 0px;
	padding: 7px 10px;
	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
	font-size: 14px;
	line-height: 1.43;
	-webkit-font-smoothing: antialiased;	
}

.map-search{
	margin-bottom: 10px;
}

